--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -74,7 +74,7 @@
 	    <p><b>Owner: </b>John Lennon</p>
 	  </div>
 	  <div class="description">
-        <p>Description of product</p>
+        <p>OnTheRocks is a Frank Lloyd Wright inspired modern California Ranch w/ subtle Prairie & International architectural design; perched on a promontory overlooking cove w/ jaw dropping ocean views and mesmerizing - audible crashing white water waves. Complete with spa, BBQ, dry/wet sauna, chefs kitchen, lux bedding and linens, Le Creuset crockery, Mauviel stainless steel cookware, Viking appliances, Wolf small kitchen appliances, Jura Espresso Machine with frother, WIFI, streaming Roku & Alexa .</p>
     </div>
 	</article>
 	<article>
@@ -100,7 +100,7 @@
 	    <p><b>Owner: </b>Adrianne</p>
 	  </div>
 	  <div class="description">
-        <p>Description of product</p>
+        <p>Tucked away in our peaceful garden, this modern Hobbit Cottage will delight you! Although it's not the Shire of Middle Earth from LOTR, it's our little piece of paradise. We are located near Bryce Canyon, Brian Head and Zion National Park, Kannarraville Falls. Custom built by Chris and I for those who love adventure, hiking, snow boarding. Make sure to catch the world-famous Shakespeare festival. Cedar City is known as "Festival City" for a good reason!</p>
     </div>
 	</article>
 	<article>
@@ -126,7 +126,7 @@
 	    <p><b>Owner: </b>Paul McCartney</p>
 	  </div>
 	  <div class="description">
-        <p>Description of product</p>
+        <p>A gentle stream feeds into the placid pond surrounding this designer mountain estate with panoramic views of the San Juan Mountains. Take a glass of vino across a foot bridge and sip around the sunken fire pit, or head inside the soaring interiors to admire the wild beauty of the West through floor-to-ceiling glass walls. You’re minutes from the slopes, with the Alta Lakes a short drive further.</p>
     </div>
 	</article>
       </section>
