--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -37,7 +37,7 @@
             <h4>Internet, Kitchen...</h4>
             <ul class="popover">
                 <li>
-                    <h4></h4>Internet</h4>
+                    <h4>Internet</h4>
                 </li>
                 <li>
                     <h4>Tv</h4>
